--- a/src/css/KeyData.css
+++ b/src/css/KeyData.css
@@ -3,6 +3,7 @@
   align-items: center;
   background-color: #fbfbfb;
   padding: 30px;
+  border-radius: 5px;
 }
 
 .key__icon {
