--- a/src/css/Sidebar.css
+++ b/src/css/Sidebar.css
@@ -9,6 +9,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  z-index: 99;
 }
 
 .sidebar__link {
